@@ -3,19 +3,19 @@ Hash: SHA256
 
 AUX lynis.cron-new 70 SHA256 852f547d4c2aeb5d592b627f5456868eff97c26aede8fbfd7c996f9be5feb394 SHA512 f90592c9adb6617b367c22912ceb984cca9a64c1bfa092efb50f5f9df48b07f61c7e990b969f3871161d92ff28bdb131175d46b334947980b7ead49dd6ff70c7 WHIRLPOOL e7f9b0d32083b91b6f93b53edb39145bbb1e4302facffc5725e68dc1ed5e00cee2a26297d80ea6eefd0f6a237d9b2c9965d2dbfb062a8dd71e9f9a5dc512b234
 DIST lynis-1.3.0.tar.gz 119797 SHA256 fe265965eb1ce8fac352e0bddea1d5ec6508c319bf88a5f63c2edecf2af6de54 SHA512 a2cf40fbc245e9ed89740026374f3b61110cc1e0282899284699a2271cb4996f30d0a91562d3e2eaf5eb165ab89d0860127ceeb5767aec1d5538b879657a76a8 WHIRLPOOL c19aaaf2f9ccd8141a86b1eeecf129ab83006b50ed428eb1801b58811b441f3c5cfea37d1333cf58fd372b3f40026735bdc2e44ace3de399a27e2e0dd8300fa3
-DIST lynis-1.5.1.tar.gz 145700 SHA256 f4122ff853724483925246903a048d425313ffe1b980ca0134251f74d9fa5616 SHA512 50747475e0395748a1cfd0612a241c1308bdebf767d76e4376329ab540105e9456227ca33d144405896029c344cb841d38243df88e3b4a5d3fa5fa4a57914740 WHIRLPOOL 1f18e0fa109103c0c86e8209ddbcd0b32fdba8cb4476a75f012aad8903b0cf35dcd92c3117f95c0815edf2db10c50f0c38883d0e10d917e9e0fafc04dc27b168
+DIST lynis-1.5.2.tar.gz 145963 SHA256 9ee201497b61acfe2ef935d54175bd483734c536dd31eb5546342f92e45f156e SHA512 c5c4cb2649044eaf29647785122de7d57f1fb7cfec99c00144c548584b9fec29c5de03ff8a81bf84ccba33e5374a9834a56d54ff8e56879e9f21da22fffab13e WHIRLPOOL 65116787c33e334a69515c90e1dbe21bff68b52bb26ac1359706e202fb70f810fbf378df48023ebe3eb2e6ee9765aaacf37b9a32ed254af8fafc3abd05b57ebc
 EBUILD lynis-1.3.0.ebuild 1038 SHA256 64062588fefb257de0ca988c3ee5731c135192e2bc3a87aaa2cc126f1faec142 SHA512 a75ec70fa148d1392872f587b9a1b3166da179c148e0b41d8b07ba4bc11ec4997b0738c9d56603b9b1ce5aa74e32ec82966df7d0cd0cb3a17e5bf3b6d305df98 WHIRLPOOL 914776bdb6a8030af1c82092bbeb5a5bf1f9578dc3863c7e22424712cbdaffd2e2647678777a07d2c133d02cc1a2ce3c6c727a681e52c97120f4436cc00773ec
-EBUILD lynis-1.5.1.ebuild 945 SHA256 14836cf5d206fab37112ac8957d11386e1e0d6e639fcacbd2840191c9c5c561f SHA512 bf1c80ae6e7c0b17907b4f7671546d3416d04039604dd5c28258377fe0494f72da9f93d9fc20d9254ca8dd85acb13f9008277001eee4401abf1df6cc3d005d7b WHIRLPOOL e2d1412d233221aff6c4d371c033c8a305a9e3bf95b9d0ea1c3489d39aded907786c47dbc5c7a59f98e30fa82fc2208040250ef30ef58ad168d0a37bc348cc11
-MISC ChangeLog 6771 SHA256 bffa3776b2534965f1ca929843ac1aec11aaf72611227c1b32d3fa62dd01d79e SHA512 47b44958650b0e063f1829deb7d75032001d9e0c67c86bc8659d3abc9758ac3edc1f291128644e426af78405fa8399a09c70ce0dda947ec5a0d7960fb84571fc WHIRLPOOL 090190e6c3cf8bca26122321bdb0cd9cadef67808c3ce8db083606d1dd02796492812988b4a1e31927606ba3fa8a4648095f377070f2b1d2d2ca1986d57f3ca3
+EBUILD lynis-1.5.2.ebuild 1007 SHA256 b2b6842de5f9f8118212baa06b3c58f417250272a5971d8169376058fbf162cf SHA512 6c8fe82d469e69e63d2ee94dc8b3d579510233c91e1d9c1b89d21ac3a28202493eca5d8bbe79c1171780a222ed0b5fbe6091fae73e05a403a8ec570ac3062fa6 WHIRLPOOL 5b824fe6dddee6df33e490183f52bd010abb394f31a7e396f64a5d2a47d3591fbd4230c0dd45681ea0c03243518c572b59117cd5274e769cbf8ca40ec72062e4
+MISC ChangeLog 6940 SHA256 5876b7305842dfaa7c1f75f3c4f6a5d1fd220b8c74e6b900aea978fb543378ec SHA512 9842ff72f52daf77ec55270899fcc5156744a64387ec4418dd307d99c1637b0ac0f6c63094d105e7b13f26320bb20abfc51688e7492fd7af840a0b607baa8fce WHIRLPOOL 9c6c715eceec00d05a6c2679b885056fe51e69dcc8075fb66dfbb356a9f30b5a21112d044b99b2c686025ffa15209af11f0e7f1ed7fb1c855acdf7df8399510e
 MISC metadata.xml 254 SHA256 01509f805151143c7aad5241de9ea61ba92f17bf41222ce7e37b650a504131ec SHA512 ae6cd2b19d9070883747fba98a462fb3b0049b69ba98deef52faeef48f298f0b1ffc85a46dcdea753191f36d4361e6b34a62e2bbcdf264defe5d270056fc6895 WHIRLPOOL d38eafc431ab48a08cefa7860b330eb746ad0a570e6fc6c7204b14d9d7044789492862fbc5444727e224d6443b6120e907c47b8c70ed6a8ec96303d05fca15c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTWWqvAAoJEMOx0zmdw4Z1ne0IAL+X5MtoxAoVbUCFSac/I6IX
-acje2Z9Z36CFG3IbISdY92vx/YeGyj6G9ftExIYZvmgMYv6iZZLO/b3y97QrGCCl
-N65oA4Bvrkkzlo9I7KCBTn6vdUUF/RZXoFZ74BQVcXXDZNA3GodghXjxe1ETSKLX
-NTgB9H2ZdeOdaKgCFmScqUxqByAHRoGYBEUVbjCBzNB8Op//Km4ZGrx9oC/bKMyg
-sYeoigJy9TAYHRJYSy+/sZeQygtSaP1hSFMBtIVSIAg59ZYCggKOB5c2WjXsM6Sb
-tUV3a9An7yhq+JD1wYRarGJq8Qo9v6/G2s2TuDlK9ERSLJaqhaDfgCik2A++oXg=
-=BC1b
+iQEcBAEBCAAGBQJTfmhLAAoJEMOx0zmdw4Z1jOUH/3KSeCz5uqdvJoE21b9cQAAv
+m9fhBORph94rTrjdI4D4Dlal+cj37gKdVKwbUEr5/ut3T0XiLF/8W7V4fhzkmVwA
+X5+5AQtCkA6oc6VyUe1hvsSbDdsEA+Gb8rz+cnfUbx2HB2qaAPRX1W1FUIBX+jE7
+SwQUBsKoPpN/uk3sV63/6QKclPtdf1ERDx7GdsLsORnH34YehiVf3Du+U7lbj1/q
+qV1CA4QJcGzAOlo9OLNrKRY7iWF+oZFblibCYNGI4QZGGxtTMuG/U3TcEMzlHHjT
+VAtDr6/0HiTMvCfI7OKHOL+PfwEvxv8M7dyvm+zhxr1Vw+xFXbhEIU6mTfhoGls=
+=FrjJ
 -----END PGP SIGNATURE-----
