@@ -1,6 +1,12 @@
 # ChangeLog for app-forensics/lynis
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.48 2014/04/24 19:48:59 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.49 2014/05/22 21:12:42 idl0r Exp $
+
+*lynis-1.5.2 (22 May 2014)
+
+  22 May 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.1.ebuild,
+  +lynis-1.5.2.ebuild:
+  Version bump. Add epatch_user, bug 507438
 
 *lynis-1.5.1 (24 Apr 2014)
 
